<resources>
    <!-- General -->
    <string name="app_name">ACTIVIZER</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeText">Welcome to Activizer v.0.1</string>

    <!-- Titles -->
    <string name="title_activity_screen_login">Sign in</string>
    <string name="title_activity_screen_social">ScreenSocial</string>
    <string name="title_activity_screen_notifications">Notifications</string>
    <string name="title_activity_screen_activities">Activities</string>
    <string name="title_activity_screen_add_event">AddEvent</string>
    <string name="title_activity_screen_menu">Menu</string>
    <string name="title_activity_screen_calendar">Calendar</string>
    <string name="title_activity_screen_whatson">What\'s on</string>

    <!-- event details -->
    <string name="title_activity_event_details">Event Details</string>
    <string name="activity">Activity:</string>
    <string name="date">Date:</string>
    <string name="starttime">StartTime:</string>
    <string name="endtime">EndTime:</string>
    <string name="location">Location:</string>
    <string name="participants">Participants</string>
    <string name="comments">Comments</string>

    <!-- Login -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>



</resources>
