<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScreenEventDetails"
    tools:showIn="@layout/activity_screen_event_details">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_eventDetails_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_eventDetails_activity_name_txt"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentTop="true"
            android:background="?attr/editTextBackground"
            android:text="@string/activity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tv_eventDetails_activity_name"
            android:layout_alignParentTop="true"
            android:background="?attr/editTextBackground"
            android:layout_toEndOf="@+id/tv_eventDetails_activity_name_txt"

            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:id="@+id/btn_eventDetails_edit"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_eventDetails_1"
        android:id="@+id/rl_eventDetails_2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_eventDetails_event_date_txt"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentTop="true"
            android:background="?attr/editTextBackground"
            android:text="@string/date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tv_eventDetails_event_date"
            android:background="?attr/editTextBackground"
            android:layout_toEndOf="@+id/tv_eventDetails_event_date_txt"

            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_eventDetails_2"
        android:id="@+id/rl_eventDetails_3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_eventDetails_event_st_txt"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentTop="true"
            android:background="?attr/editTextBackground"
            android:text="@string/starttime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tv_eventDetails_event_st"
            android:background="?attr/editTextBackground"
            android:layout_toEndOf="@+id/tv_eventDetails_event_st_txt"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_eventDetails_3"
        android:id="@+id/rl_eventDetails_4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_eventDetails_event_et_txt"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentTop="true"
            android:background="?attr/editTextBackground"
            android:text="@string/endtime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tv_eventDetails_event_et"
            android:background="?attr/editTextBackground"
            android:layout_toEndOf="@+id/tv_eventDetails_event_et_txt"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_eventDetails_4"
        android:id="@+id/rl_eventDetails_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_eventDetails_event_loc_txt"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentTop="true"
            android:background="?attr/editTextBackground"
            android:text="@string/location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tv_eventDetails_event_loc"
            android:background="?attr/editTextBackground"
            android:layout_toEndOf="@+id/tv_eventDetails_event_loc_txt"
            />

    </RelativeLayout>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_eventDetails_participants"
        android:text="@string/participants"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/rl_eventDetails_5"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/lv_eventDetails_participants"
        android:layout_below="@+id/tv_eventDetails_participants"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_eventDetails_comments"
        android:layout_below="@+id/lv_eventDetails_participants"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/comments" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/lv_eventDetails_comments"
        android:layout_below="@+id/tv_eventDetails_comments"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom = "true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Comment"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:id="@+id/btn_eventDetails_new_comment"
        android:layout_below="@+id/lv_eventDetails_participants"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
